--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.6.13",
     "zustand": "^4.5.2"
